lenny-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lenny
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lenny
  template:
    metadata:
      labels:
        app: lenny
    spec:
      containers:
      - name: lenny
        image: us-west1-docker.pkg.dev/lenny-448217/lenny-repo/lenny-gke:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
