lenny-local-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lenny-service
spec:
  type: NodePort  # or LoadBalancer if you're using a cloud provider
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: lenny
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lenny
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lenny
  template:
    metadata:
      labels:
        app: lenny
    spec:
      containers:
      - name: lenny
        image: user/lenny
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
