lenny-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lenny-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: lenny
